mdapi/objects/AutomationController__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ExecuteAccountAutomation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteCaseAutomation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteContactAutomation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteLeadAutomation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteOpportunityAutomation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Automation Controller</label>
</CustomObject>